# FlashCards

./: README.md  config.py  document_processor.py  main.py  models.py  pyproject.toml  requirements.txt
static/css/: style.css
static/js/: main.js
templates/: base.html  flashcards.html  index.html  login.html  register.html
